# dll_hook-gen

./: Cargo.toml
src/: lib.rs  main.rs
templates/: hook.rs.tera
test/: build.sh  testlib.cpp
