[package]
name = "dll-hook-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
libloading = "0.8.6"
once_cell = "1.21.3"
pelite = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"

[[bin]]
name = "dll-hook-gen"
path = "src/main.rs"
